--- a/package.json
+++ b/package.json
@@ -31,14 +31,15 @@
   },
   "homepage": "https://github.com/linghuam/Leaflet.TrackPlayback#readme",
   "devDependencies": {
-    "copy-webpack-plugin": "^4.5.3",
+    "copy-webpack-plugin": "^5.1.1",
     "eslint": "^5.6.1",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "webpack": "^4.20.2",
+    "webpack": "^4.41.5",
     "webpack-cli": "^3.1.2"
-  }
+  },
+  "dependencies": {}
 }
